--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt-contrib-qunit": "~0.4.0"
+    "grunt-contrib-qunit": "~0.4.0",
+    "grunt-lib-phantomjs": "^1.1.0"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.10.0",
